setup static file access for partials, layouts and pages

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,2 +1,6 @@
-<link rel="stylesheet" href="/">
+<link rel="stylesheet" href="/css/user_profile.css">
 <h1>Rescode / Profile page</h1>
+<div>
+    <img src="/images/wallpaper.png" alt="pic">
+    <p>pic</p>
+</div>
