Sign up page working

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,12 +6,15 @@
         </title>
     </head>
     <body>
+        <h2>Login</h2>
         <form action="authenticate_user">
-            <label for="email">Email: </label>
-            <input type="text" required>
+            <!-- <label for="email">Email: </label> -->
+            <input type="text" required placeholder="Email">
 
-            <label for="password">Password: </label>
-            <input type="password" minlength="8" required>
+            <!-- <label for="password">Password: </label> -->
+            <input type="password" minlength="8" required placeholder="Password">
+
+            <input type="submit" value="Log in">
         </form>
     </body>
 </html>
