--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,14 +7,11 @@
     </head>
     <body>
         <h2>Login</h2>
-        <form action="authenticate_user">
-            <!-- <label for="email">Email: </label> -->
-            <input type="text" required placeholder="Email">
-
-            <!-- <label for="password">Password: </label> -->
-            <input type="password" minlength="8" required placeholder="Password">
-
-            <input type="submit" value="Log in">
+        <form action="/users/create" method="POST">
+            <form action="/users/create-session" method="POST">
+                <input type="email" name="email" placeholder="Email"  required>
+                <input type="password" name="password" placeholder="Password"  required>
+                <input type="submit" value="Sign In">
         </form>
     </body>
 </html>
