--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Sign Up</h1>
-        <form action="create_user" method="POST">
+        <form action="/users/create_user" method="POST">
             <!-- <label for="email">Email Address: </label> -->
             <input type="text" name="name" placeholder="Your Name">
             
@@ -15,7 +15,7 @@
             <input type="text" name="email" placeholder="Your email">
 
             <!-- <label for="password">Password: </label> -->
-            <input type="password" name="password" minlength="8" placeholder="Password">
+            <input type="password" name="password" placeholder="Password">
 
             <input type="password" name="confirm_password" placeholder="Confirm Password">
 
