--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -2,5 +2,10 @@
 <h1>Rescode / Profile page</h1>
 <div>
     <img src="/images/wallpaper.png" alt="pic">
-    <p>pic</p>
+    <p>Name: <%=user.name %></p>
+    <p>User email: <%=user.email %></p>
 </div>
+
+<form action="logout" method="POST">
+    <input type="submit" name="logout" id="logout" value="Log out">
+</form>
