--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,7 +15,7 @@
             <input type="text" name="email" placeholder="Your email">
 
             <!-- <label for="password">Password: </label> -->
-            <input type="password" name="password" minlength="8" placeholder="Password">
+            <input type="password" name="password" placeholder="Password">
 
             <input type="password" name="confirm_password" placeholder="Confirm Password">
 
