--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -4,3 +4,6 @@
     <img src="/images/wallpaper.png" alt="pic">
     <p>pic</p>
 </div>
+
+<p>Name: <%=user.name %></p>
+<p>User email: <%=user.email %></p>
