--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,3 +1,18 @@
 <header>
     Page header
+    <ul>
+        <% if(locals.user){ %>
+            <li><%= user.name %></li>
+            <li>
+                <a href="/users/logout">Log Out</a>
+            </li>
+        <% }else{ %>
+            <li>
+                <a href="/users/signup">Sign In</a>
+            </li>
+            <li>
+                <a href="/users/login">Login</a>
+            </li>
+        <% } %>
+    </ul>
 </header>
