--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,4 +1,6 @@
-body{
-    margin: 0;
-    /* text-align: center; */
-}
+body {
+  margin: 0;
+  /* text-align: center; */ }
+
+#layout-main0 {
+  height: 100%; }
