--- a/assets/css/user_profile.css
+++ b/assets/css/user_profile.css
@@ -1,14 +1,11 @@
-body{
-    background-color: lightblue;
-}
+body {
+  background-color: lightblue; }
 
-img{
-    align-items: center;
-    max-height: 300px;
-    max-width: 300px;
-
-    border-style:dashed;
-    border-width: 2px;
-    border-color: rgb(0, 134, 196);
-    border-radius: 150px;
-}
+img {
+  align-items: center;
+  max-height: 300px;
+  max-width: 300px;
+  border-style: dashed;
+  border-width: 2px;
+  border-color: #0086c4;
+  border-radius: 150px; }
