complete authentication website

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,5 +1,5 @@
-<header>
-    Page header
+<header class="header0">
+    <img src="/images/logo.png" alt="Rescode">
     <ul>
         <% if(locals.user){ %>
             <li><%= user.name %></li>
