--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,3 +1,11 @@
-<header>
-    Page footer
+<header class="footer0">
+    © Parag Vadher. Most Rights Reserved. 
+    <ul>
+        <li>
+            <a href="/users/home">Home</a>
+        </li>
+        <li>
+            <a href="/users/profile">Profile</a>
+        </li>
+    </ul>
 </header>
