--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -2,7 +2,7 @@
     © Parag Vadher. Most Rights Reserved. 
     <ul>
         <li>
-            <a href="/users/home">Home</a>
+            <a href="/">Home</a>
         </li>
         <li>
             <a href="/users/profile">Profile</a>
