--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,24 @@
 <h1>Rescode / <%= title %></h1>
+
+<section id="feed-posts">
+    <h3>Posts</h3>
+    <% if(locals.user){ %>
+    <form action="/posts/create" id="new-post-form" method="POST">
+        <textarea name="content" id="" cols="30" rows="5" placeholder="Type here..."></textarea>
+        <input type="submit" value="Post">
+    </form>
+    <% } %>
+    <div>
+        <ul>
+            <% for(post of posts){ %>
+            <li>
+                <p>
+                    <%= post.content %>
+                    <br>
+                    <small><%= post.user.name %></small>
+                </p>
+            </li>
+            <% } %>
+        </ul>
+    </div>
+</section>
