--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,6 +17,15 @@
                     <br>
                     <small><%= post.user.name %></small>
                 </p>
+                <div class="post-comments">
+                    <% if(locals.user){ %>
+                        <form action="/comments/create" id="new-comment-form" method="POST">
+                            <input type="text" name="content" id="" cols="20" rows="1" placeholder="comment...">
+                            <input type="hidden" name="post" id="" value="<%= post._id %>">
+                            <input type="submit" value="Add comment">
+                        </form>
+                    <% } %>
+                </div>
             </li>
             <% } %>
         </ul>
