--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,26 +8,48 @@
         <input type="submit" value="Post">
     </form>
     <% } %>
-    <div>
+
+    <div id="posts-list-container">
         <ul>
             <% for(post of posts){ %>
+                
             <li>
                 <p>
                     <%= post.content %>
                     <br>
-                    <small><%= post.user.name %></small>
+                    <small>
+                        <%= post.user.name %>
+                    </small>
                 </p>
                 <div class="post-comments">
-                    <% if(locals.user){ %>
-                        <form action="/comments/create" id="new-comment-form" method="POST">
-                            <input type="text" name="content" id="" cols="20" rows="1" placeholder="comment...">
-                            <input type="hidden" name="post" id="" value="<%= post._id %>">
-                            <input type="submit" value="Add comment">
+                    <% if (locals.user){ %>
+                        <form action="/comments/create" method="POST">
+                            <input type="text" name="content" placeholder="Type Here to add comment..." required>
+                            <input type="hidden" name="post" value="<%= post._id %>" >
+                            <input type="submit" value="Add Comment">
                         </form>
+
                     <% } %>
+
+                    <div class="post-comments-list">
+                        <ul id="post-comments-<%= post._id %>">
+                            <% for (comment of post.comments){%>
+                                
+                            <p>
+                                <%= comment.content %>
+                                <br>
+                                <small>
+                                    <%= comment.user.name %>
+                                </small>
+                            </p>    
+                            <%} %>
+                        </ul>
+                    </div>
                 </div>
+                
             </li>
-            <% } %>
+                
+            <%} %>
         </ul>
     </div>
 </section>
