comments functionality added with user details

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -8,7 +8,7 @@
             </li>
         <% }else{ %>
             <li>
-                <a href="/users/signup">Sign In</a>
+                <a href="/users/signup">Sign Up</a>
             </li>
             <li>
                 <a href="/users/login">Login</a>
