--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
     <h3>Posts</h3>
     <% if(locals.user){ %>
     <form action="/posts/create" id="new-post-form" method="POST">
-        <textarea name="content" id="" cols="30" rows="5" placeholder="Type here..."></textarea>
+        <textarea name="content" id="" cols="30" rows="5" placeholder="Type here..." required></textarea>
         <input type="submit" value="Post">
     </form>
     <% } %>
