--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,6 +16,11 @@
             <li>
                 <p>
                     <%= post.content %>
+                    <% if(post.user && post.user.id==locals.user.id){ %>
+                    <small>
+                        <a href="/post/destroy/<%= post.id %>">X</a>
+                    </small>
+                    <% } %>
                     <br>
                     <small>
                         <%= post.user.name %>
