--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <% if(locals.user){ %>
     <form action="/posts/create" id="new-post-form" method="POST">
         <textarea name="content" id="" cols="30" rows="5" placeholder="Type here..." required></textarea>
-        <input type="submit" value="Post">
+        <input type="submit" value="Add Post">
     </form>
     <% } %>
 
@@ -14,43 +14,8 @@
             <% for(post of posts){ %>
                 
             <li>
-                <p>
-                    <%= post.content %>
-                    <% if(post.user && post.user.id==locals.user.id){ %>
-                    <small>
-                        <a href="/post/destroy/<%= post.id %>">X</a>
-                    </small>
-                    <% } %>
-                    <br>
-                    <small>
-                        <%= post.user.name %>
-                    </small>
-                </p>
-                <div class="post-comments">
-                    <% if (locals.user){ %>
-                        <form action="/comments/create" method="POST">
-                            <input type="text" name="content" placeholder="Type Here to add comment..." required>
-                            <input type="hidden" name="post" value="<%= post._id %>" >
-                            <input type="submit" value="Add Comment">
-                        </form>
-
-                    <% } %>
-
-                    <div class="post-comments-list">
-                        <ul id="post-comments-<%= post._id %>">
-                            <% for (comment of post.comments){%>
-                                
-                            <p>
-                                <%= comment.content %>
-                                <br>
-                                <small>
-                                    <%= comment.user.name %>
-                                </small>
-                            </p>    
-                            <%} %>
-                        </ul>
-                    </div>
-                </div>
+                
+                <%- include('_posts') -%>
                 
             </li>
                 
