users can now update their profile info

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -5,5 +5,18 @@
     <p>pic</p>
 </div>
 
-<p>Name: <%=user.name %></p>
-<p>User email: <%=user.email %></p>
+<p>Name: <%=profile_user.name %></p>
+<p>User email: <%=profile_user.email %></p>
+
+<% if(user.id == profile_user.id) { %> 
+    <!-- show form -->
+    <form action="/users/update/<%= profile_user.id %>" method="POST">
+        <input type="text" name="name" id="" placeholder="Your Name" value="<%= profile_user.name %>" required>
+        <input type="email" name="email" id="" placeholder="Your Email" value="<%= profile_user.email %>" required>
+        <input type="submit" name="" id="" value="submit">
+    </form>
+<% }else{ %>
+    <!-- show profile info -->
+    <p>Name: <%=profile_user.name %></p>
+    <p>User email: <%=profile_user.email %></p>
+<% } %>
