--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,3 +23,16 @@
         </ul>
     </div>
 </section>
+
+<section id="user-acqs">
+    <ul>
+        <% if(locals.user){ %>
+            <h4>List of profiles on this page</h4>
+            <% for(u of all_users){%> 
+                <li>
+                    <a href="/users/profile/<%= u.id %>"><%= u.name %></a> 
+                </li>
+            <% } %>
+        <% } %>
+    </ul>
+</section>
