--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -5,7 +5,11 @@
             <a href="/">Home</a>
         </li>
         <li>
-            <a href="/users/profile/<%= locals.user.id %>">Profile</a>
+            <%if(locals.user){%>
+                <a href="/users/profile/<%= locals.user.id %>">Profile</a>
+            <%}else{%>
+                <a href="/users/login">Login</a>
+            <%}%>
         </li>
     </ul>
 </header>
