--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -8,7 +8,7 @@
             <%if(locals.user){%>
                 <a href="/users/profile/<%= locals.user.id %>">Profile</a>
             <%}else{%>
-                <a href="/users/login">Login</a>
+                <a href="/users/login">Profile</a>
             <%}%>
         </li>
     </ul>
