--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,38 +1,40 @@
-<h1>Rescode / <%= title %></h1>
+<link rel="stylesheet" href="/css/home.css">
 
-<section id="feed-posts">
-    <h3>Posts</h3>
-    <% if(locals.user){ %>
-    <form action="/posts/create" id="new-post-form" method="POST">
-        <textarea name="content" id="" cols="30" rows="5" placeholder="Type here..." required></textarea>
-        <input type="submit" value="Add Post">
-    </form>
-    <% } %>
-
-    <div id="posts-list-container">
-        <ul>
-            <% for(post of posts){ %>
-                
-            <li>
-                
-                <%- include('_posts') -%>
-                
-            </li>
-                
-            <%} %>
-        </ul>
-    </div>
-</section>
-
-<section id="user-acqs">
-    <ul>
+<div class="home-container">
+    <section id="feed-posts">
+        <h3>Posts</h3>
         <% if(locals.user){ %>
-            <h4>List of profiles on this page</h4>
-            <% for(u of all_users){%> 
-                <li>
-                    <a href="/users/profile/<%= u.id %>"><%= u.name %></a> 
-                </li>
-            <% } %>
+        <form action="/posts/create" id="new-post-form" method="POST">
+            <textarea name="content" id="" cols="30" rows="5" placeholder="Type here..." required></textarea>
+            <input type="submit" value="Add Post">
+        </form>
         <% } %>
-    </ul>
-</section>
+    
+        <div id="posts-list-container">
+            <ul>
+                <% for(post of posts){ %>
+                    
+                <li>
+                    
+                    <%- include('_posts') -%>
+                    
+                </li>
+                    
+                <%} %>
+            </ul>
+        </div>
+    </section>
+    
+    <section id="user-acqs">
+        <ul>
+            <% if(locals.user){ %>
+                <h4>List of profiles on this page</h4>
+                <% for(u of all_users){%> 
+                    <li>
+                        <a href="/users/profile/<%= u.id %>"><%= u.name %></a> 
+                    </li>
+                <% } %>
+            <% } %>
+        </ul>
+    </section>
+</div>
