corrected the deletion of other users' comments under your own post

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,5 +1,5 @@
 <header class="header0">
-    <img src="/images/logo.png" alt="Rescode">
+    <a href="/"><img src="/images/logo.png" alt="Rescode" width="200" height="40"></a>
     <ul>
         <% if(locals.user){ %>
             <li><%= user.name %></li>
