asynchronous approach implemented on controllers

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
-  /* text-align: center; */ }
+  /* text-align: center; */
+  background-color: #e6e8ee; }
 
 #layout-main0 {
   height: 100%; }
