--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     /* text-align: center; */
+    background-color: rgb(230, 232, 238);
 }
 #layout-main0{
     height: 100%;
