--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -6,4 +6,5 @@
   .home-container #user-acqs {
     width: 30%;
     padding: 10px;
-    border-left: 1px solid lightgrey; }
+    border-left: 1px solid lightgrey;
+    height: 100%; }
