--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,6 +14,10 @@
 
         <%- include('_header') %>
 
+        <% if((flash.success)&&(flash.success.length>0)){ %>
+            <h5><%= flash.success %></h5>
+        <% } %>
+
         <main id="layout-main0">
             <%- body %>
         </main>
