--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,7 @@
         <title>
             <%= title %>
         </title>
+        <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
         <link rel="stylesheet" href="/css/layout.css">
         <link rel="stylesheet" href="/css/header.css">
         <link rel="stylesheet" href="/css/footer.css">
@@ -14,10 +15,6 @@
 
         <%- include('_header') %>
 
-        <% if((flash.success)&&(flash.success.length>0)){ %>
-            <h5><%= flash.success %></h5>
-        <% } %>
-
         <main id="layout-main0">
             <%- body %>
         </main>
@@ -25,6 +22,15 @@
         <%- include('_footer') %>
 
         <%- script %>
+
+        <script src="https://unpkg.com/notie">
+            <% if(true){ %>
+                notie.alert({
+                    type: 1, // optional, default = 4, enum: [1, 2, 3, 4, 5, 'success', 'warning', 'error', 'info', 'neutral']
+                    text: '<%= flash.success %>',
+                })
+            <% } %>
+        </script>
 
     </body>
 </html>
