--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -24,7 +24,7 @@
         <%- script %>
 
         <script src="https://unpkg.com/notie">
-            <% if(true){ %>
+            <% if((flash.success)&&(flash.success.length>0)){ %>
                 notie.alert({
                     type: 1, // optional, default = 4, enum: [1, 2, 3, 4, 5, 'success', 'warning', 'error', 'info', 'neutral']
                     text: '<%= flash.success %>',
