--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,8 @@
         <title>
             <%= title %>
         </title>
-        <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
         <link rel="stylesheet" href="/css/layout.css">
         <link rel="stylesheet" href="/css/header.css">
         <link rel="stylesheet" href="/css/footer.css">
@@ -23,12 +24,11 @@
 
         <%- script %>
 
-        <script src="https://unpkg.com/notie">
+        <script>
             <% if((flash.success)&&(flash.success.length>0)){ %>
-                notie.alert({
-                    type: 1, // optional, default = 4, enum: [1, 2, 3, 4, 5, 'success', 'warning', 'error', 'info', 'neutral']
-                    text: '<%= flash.success %>',
-                })
+                new Noty({
+                    text: "<%= flash.success %>"
+                }).show();
             <% } %>
         </script>
 
