--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,7 +27,23 @@
         <script>
             <% if((flash.success)&&(flash.success.length>0)){ %>
                 new Noty({
-                    text: "<%= flash.success %>"
+                    theme: 'relax',
+                    text: "<%= flash.success %>",
+                    type: 'success',
+                    layout: 'bottomRight',
+                    timeout: 1200
+                }).show();
+            <% } %>
+        </script>
+
+        <script>
+            <% if((flash.error)&&(flash.error.length>0)){ %>
+                new Noty({
+                    theme: 'relax',
+                    text: "<%= flash.error %>",
+                    type: 'error',
+                    layout: 'bottomRight',
+                    timeout: 1200
                 }).show();
             <% } %>
         </script>
