--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,14 +4,28 @@
         <title>
             <%= title %>
         </title>
+        <link rel="stylesheet" href="/css/authpages.css">
     </head>
     <body>
-        <h2>Login</h2>
+        <div class="DataForm">
             <form action="/users/create-session" method="POST">
-                <input type="email" name="email" placeholder="Email" required>
-                <input type="password" name="password" placeholder="Password"  required>
-                <input type="submit" value="Sign In">
-
+                <h2 class="title">Login</h2>
+                <div class="InputContainer">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" placeholder="Email" required>
+                </div>
+                
+                <div class="InputContainer">
+                    <label for="password">Password</label>
+                    <input type="password" name="password" placeholder="Password"  required>
+                </div>
+                
+                <div class="InputContainer">
+                    <input type="submit" class="submitBtn" value="Login">
+                </div>
+    
             </form>
+
+        </div>
     </body>
 </html>
