--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,22 +4,36 @@
         <title>
             <%= title %>
         </title>
+        <link rel="stylesheet" href="/css/authpages.css">
     </head>
     <body>
-        <h1>Sign Up</h1>
-        <form action="create_user" method="POST">
-            <!-- <label for="email">Email Address: </label> -->
-            <input type="text" name="name" placeholder="Your Name">
-            
-            <!-- <label for="name">Name: </label> -->
-            <input type="text" name="email" placeholder="Your email">
+        <div class="DataForm">
+            <form action="create_user" method="POST">
+                <h1 class="title">Sign up</h1>
+                <div class="InputContainer">
+                    <!-- <label for="email">Email Address </label> -->
+                    <input type="text" name="name" placeholder="Your Name">
+                </div>
 
-            <!-- <label for="password">Password: </label> -->
-            <input type="password" name="password" placeholder="Password">
+                <div class="InputContainer">          
+                    <!-- <label for="name">Name </label> -->
+                    <input type="text" name="email" placeholder="Your email">
+                </div>
 
-            <input type="password" name="confirm_password" placeholder="Confirm Password">
+                <div class="InputContainer">
+                    <!-- <label for="password">Password </label> -->
+                    <input type="password" name="password" placeholder="Password">
+                </div>
 
-            <input type="submit" value="Sign Up">
-        </form>
+                <div class="InputContainer">
+                    <!-- <label for="password">Confirm Password </label> -->
+                    <input type="password" name="confirm_password" placeholder="Confirm Password">
+                </div>
+
+                <div class="InputContainer0">
+                    <input type="submit" class="submitBtn" value="Sign Up">
+                </div>
+            </form>
+        </div>
     </body>
 </html>
