--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -11,13 +11,13 @@
             <form action="create_user" method="POST">
                 <h1 class="title">Sign up</h1>
                 <div class="InputContainer">
-                    <label for="email">Email Address </label>
+                    <label for="email">Name </label>
                     <input type="text" name="name" placeholder="Your Name">
                 </div>
     
                 <div class="InputContainer">          
-                    <label for="name">Name </label>
-                    <input type="text" name="email" placeholder="Your email">
+                    <label for="name">Email </label>
+                    <input type="email" name="email" placeholder="Your email">
                 </div>
     
                 <div class="InputContainer">
