--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -11,22 +11,22 @@
             <form action="create_user" method="POST">
                 <h1 class="title">Sign up</h1>
                 <div class="InputContainer">
-                    <label for="email">Name </label>
+                    <!-- <label for="email">Name </label> -->
                     <input type="text" name="name" placeholder="Your Name">
                 </div>
     
                 <div class="InputContainer">          
-                    <label for="name">Email </label>
-                    <input type="email" name="email" placeholder="Your email">
+                    <!-- <label for="name">Email </label> -->
+                    <input type="email" name="email" placeholder="Email address">
                 </div>
     
                 <div class="InputContainer">
-                    <label for="password">Password </label>
+                    <!-- <label for="password">Password </label> -->
                     <input type="password" name="password" placeholder="Password">
                 </div>
     
                 <div class="InputContainer">
-                    <label for="password">Confirm Password </label>
+                    <!-- <label for="password">Confirm Password </label> -->
                     <input type="password" name="confirm_password" placeholder="Confirm Password">
                 </div>
     
