adding jquery ajax

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,12 +13,8 @@
         <div id="posts-list-container">
             <ul>
                 <% for(post of posts){ %>
-                    
-                <li>
-                    
+
                     <%- include('_posts') -%>
-                    
-                </li>
                     
                 <%} %>
             </ul>
@@ -38,3 +34,4 @@
         </ul>
     </section>
 </div>
+<script src="/js/home_posts.js"></script>
