--- a/views/_posts.ejs
+++ b/views/_posts.ejs
@@ -1,9 +1,9 @@
-<li>
+<li id="post-<%= post._id %>">
     <p>
         <%= post.content %>
         <% if(locals.user && locals.user.id==post.user._id){ %>
         <small>
-            <a href="/posts/destroy/<%= post._id %>">X</a>
+            <a class="delete-post-button" href="/posts/destroy/<%= post._id %>">X</a>
         </small>
         <% } %>
         <br>
