--- a/views/_comments.ejs
+++ b/views/_comments.ejs
@@ -1,9 +1,9 @@
-<li>
+<li id="comment-<%= comment._id %>">
     <p>
         <%= comment.content %>
         <% if(locals.user && ((locals.user.id==comment.user._id)||(locals.user.id==post.user._id))){ %>
             <small>
-                <a href="/comments/destroy/<%= comment._id %>">X</a>
+                <a class="delete-comment-button" href="/comments/destroy/<%= comment._id %>">X</a>
             </small>
             <% } %>
         <br>
