--- a/assets/css/user_profile.css
+++ b/assets/css/user_profile.css
@@ -1,8 +1,9 @@
 body {
   background-color: lightblue; }
 
-img {
+#dp {
   align-items: center;
+  width: 100px;
   max-height: 300px;
   max-width: 300px;
   border-style: dashed;
