--- a/assets/scss/user_profile.scss
+++ b/assets/scss/user_profile.scss
@@ -2,8 +2,9 @@ body{
     background-color: lightblue;
 }
 
-img{
+#dp{
     align-items: center;
+    width: 100px;
     max-height: 300px;
     max-width: 300px;
 
