--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,18 +1,17 @@
 <link rel="stylesheet" href="/css/user_profile.css">
-<h1>Rescode / Profile page</h1>
 <div>
-    <img src="/images/wallpaper.png" alt="pic">
-    <p>pic</p>
+    <img id='dp' src="<%= user.avatar %>" alt="<%= user.name %>">
 </div>
-
 <p>Name: <%=profile_user.name %></p>
 <p>User email: <%=profile_user.email %></p>
 
 <% if(user.id == profile_user.id) { %> 
     <!-- show form -->
-    <form action="/users/update/<%= profile_user.id %>" method="POST">
+    <form action="/users/update/<%= profile_user.id %>" enctype="multipart/form-data" method="POST">
         <input type="text" name="name" id="" placeholder="Your Name" value="<%= profile_user.name %>" required>
         <input type="email" name="email" id="" placeholder="Your Email" value="<%= profile_user.email %>" required>
-        <input type="submit" name="" id="" value="submit">
+
+        <input type="file" name="avatar" placeholder="Profile Picture">
+        <input type="submit" name="" id="" value="Update">
     </form>
 <% } %>
