profile pic bug fixed

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/css/user_profile.css">
 <div>
-    <img id='dp' src="<%= user.avatar %>" alt="<%= user.name %>">
+    <img id='dp' src="<%= profile_user.avatar %>" alt="<%= user.name %>">
 </div>
 <p>Name: <%=profile_user.name %></p>
 <p>User email: <%=profile_user.email %></p>
