Google auth added -
ok so, there is no failsafe for users that already have an account and are still trying to use google auth. If someone tries then their account info(along with the password) will be displayed on the screen. Is there a way to stop that?

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -34,6 +34,9 @@
                     <input type="submit" class="submitBtn" value="Sign Up">
                 </div>
             </form>
+            <p>
+                <a href="/users/auth/google">Google Sign-in / Sign-up</a>
+            </p>
         </div>
     </body>
 </html>
