--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,6 +24,10 @@
     
             </form>
 
+            <p>
+                <a href="/users/auth/google">Google Sign-in / Sign-up</a>
+            </p>
+
         </div>
     </body>
 </html>
