--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -2,9 +2,10 @@
   display: flex; }
   .home-container #feed-posts {
     width: 70%;
-    padding: 10px; }
+    padding: 10px;
+    height: 50%; }
   .home-container #user-acqs {
     width: 30%;
     padding: 10px;
     border-left: 1px solid lightgrey;
-    height: 100%; }
+    height: 50%; }
