--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -3,6 +3,10 @@
         display: flex;
         flex-direction: row;
         // justify-content: space-between;
+        position:fixed;
+        bottom: 0;
+        width: 100%;
+        height: 50px;
         color: azure;
         height: 40px;
         padding-top: 3px;
